--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,6 @@ package-mode = false
 python = "3.11"
 torch = "^2.4.1"
 numpy = "^2.1.1"
+jupyter = "^1.1.1"
+torchvision = "^0.19.1"
+black = {extras = ["jupyter"], version = "^24.8.0"}
