--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,4 @@ numpy = "^2.1.1"
 jupyter = "^1.1.1"
 torchvision = "^0.19.1"
 black = {extras = ["jupyter"], version = "^24.8.0"}
+matplotlib = "^3.9.2"
